replaced deprecated tolist method